--- a/module2-assignment/css/styles.css
+++ b/module2-assignment/css/styles.css
@@ -1,3 +1,99 @@
+* {
+	box-sizing: border-box;
+}
+body{
+	background-color: #dbf3fa;
+	font-family: 'Noto Serif', serif;
+}
 h1 {
 	text-align: center;
+	margin: 50px;
+	font-weight: bold;
+}
+h3{
+	text-align: center;
+	margin: 10px;
+}
+.col{
+	width: 100%;
+}
+@media (min-width: 992px) {
+	.col-lg-4{
+		width: 33%;
+		float: left;
+	}
+
+}
+@media (min-width: 768px) and (max-width: 991px) {
+	.col-md-6{
+		width: 50%;
+		float: left;
+	}
+	.col-md-12{
+		width: 100%;
+		float: left;
+	}
+}
+@media (max-width: 767px) {
+	.col-sm-12{
+		width: 100%;
+		float: left;
+	}
+}
+.text{
+	text-align: left;
+	padding-left: 20px;
+	padding-right: 15px;
+	padding-top: 30px;
+	margin-top: 10px;
+}
+.menu{
+	background-color: #83a3be;
+	border: 3px solid black;
+	width: 90%;
+	height: auto;
+	margin-right: auto;
+	margin-left: auto;
+	margin-bottom: 30px;
+	position: relative;
+	
+}
+.title1{
+	background-color: #fcb061;
+	width: 40%;
+	height: auto;
+	border-top: 0;
+	border-right: 0;
+	border-left: 3px;
+	border-bottom: 3px;
+	border-color: black;
+	border-style: solid;
+	float: right;
+	margin-top: 0;
+}
+.title2{
+	background-color: #cc5200;
+	width: 40%;
+	height: auto;
+	border-top: 0;
+	border-right: 0;
+	border-left: 3px;
+	border-bottom: 3px;
+	border-color: black;
+	border-style: solid;
+	float: right;
+	margin-top: 0;
+}
+.title3{
+	background-color: #fdd4aa;
+	width: 40%;
+	height: auto;
+	border-top: 0;
+	border-right: 0;
+	border-left: 3px;
+	border-bottom: 3px;
+	border-color: black;
+	border-style: solid;
+	float: right;
+	margin-top: 0;
 }
